fix: replace separator to consist save to database